src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_6.snap
---
source: src/parser/test.rs
description: "if (x { x }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected ')' not found."), (0,6)->(0,7)),
        ),
        consequence: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected '{' not found."), (0,10)->(0,11)),
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (x { x }
      ^ SyntaxError: Expected ')' not found.
          ^ SyntaxError: Expected '{' not found.
