src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_8.snap
---
source: src/parser/test.rs
description: "if (x) { x + } "
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [
                    Err(UnexpectedToken("SyntaxError: Unexpected '}'."), (0,11)->(0,12)),
                ],
            },
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (x) { x + } 
           ^ [Error] SyntaxError: Unexpected '}'.
