src/parser/snapshots/monkey_language_server__parser__test__infix_happy_1.snap
---
source: src/parser/test.rs
description: "1 + 1;\na - 2;\n1 * 1;\n1 / 2;"
expression: result
---
[
    Infix {
        token: Token(Plus, "+", (0,2)->(0,3)),
        left: Int {
            token: Token(Int, "1", (0,0)->(0,1)),
            value: 1,
        },
        right: Int {
            token: Token(Int, "1", (0,4)->(0,5)),
            value: 1,
        },
        operator: Plus,
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 5,
            },
        },
    },
    Infix {
        token: Token(Minus, "-", (1,2)->(1,3)),
        left: Identifier {
            token: Token(Identifier, "a", (1,0)->(1,1)),
            name: "a",
        },
        right: Int {
            token: Token(Int, "2", (1,4)->(1,5)),
            value: 2,
        },
        operator: Minus,
        range: Range {
            start: Position {
                line: 1,
                character: 0,
            },
            end: Position {
                line: 1,
                character: 5,
            },
        },
    },
    Infix {
        token: Token(Asterisk, "*", (2,2)->(2,3)),
        left: Int {
            token: Token(Int, "1", (2,0)->(2,1)),
            value: 1,
        },
        right: Int {
            token: Token(Int, "1", (2,4)->(2,5)),
            value: 1,
        },
        operator: Mult,
        range: Range {
            start: Position {
                line: 2,
                character: 0,
            },
            end: Position {
                line: 2,
                character: 5,
            },
        },
    },
    Infix {
        token: Token(ForwardSlash, "/", (3,2)->(3,3)),
        left: Int {
            token: Token(Int, "1", (3,0)->(3,1)),
            value: 1,
        },
        right: Int {
            token: Token(Int, "2", (3,4)->(3,5)),
            value: 2,
        },
        operator: Div,
        range: Range {
            start: Position {
                line: 3,
                character: 0,
            },
            end: Position {
                line: 3,
                character: 5,
            },
        },
    },
]

===================================

1 + 1;
a - 2;
1 * 1;
1 / 2;
